# Sentiment-analysis

./: README.md  pyproject.toml
sentiment_analysis/: paragon_reviews_300.csv  sentiment_analysis.ipynb  sentiment_analysis_with_BERT.ipynb
