[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["ge0rgeth0mas <georgethomas1912@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
transformers = "^4.31.0"
ipywidgets = "^8.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
